Remove java 17 Stream.toList :(